tests/tests/ui/query_macro_invalid_field.stderr
error[E0599]: no method named `nonexistent` found for struct `UserFields<__Origin>` in the current scope
  --> tests/ui/query_macro_invalid_field.rs:11:41
   |
 1 | #[derive(Debug, toasty::Model)]
   |                 ------------- method `nonexistent` not found for this struct
...
11 |     let _ = toasty::query!(User filter .nonexistent == "Alice");
   |                                         ^^^^^^^^^^^ method not found in `UserFields<User>`
